--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node-echo",
   "main": "server.js",
   "dependencies": {
-    "nodemon": "^1.0.19"
+    "nodemon": "*"
   },
   "engine": {
     "node": "*",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bettiolo/node-echo.git"
+    "url": "http://github.com/bettiolo/node-echo.git"
   },
   "keywords": [
     "Echo"
@@ -23,7 +23,7 @@
   "author": "Marco Bettiolo <marco@bettiolo.it>",
   "license": "",
   "bugs": {
-    "url": "https://github.com/bettiolo/node-echo/issues"
+    "url": "http://github.com/bettiolo/node-echo/issues"
   },
   "homepage": "http://apilb.com"
 }
