--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "npm": "*"
   },
   "scripts": {
+    "preinstall" : "npm update npm -g && npm update -g",
+    "prestart": "npm install",
     "start": "nodemon --ignore node_modules/ server.js"
   },
   "repository": {
