moved nodemon as a dev dep

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "node-echo",
   "main": "server.js",
-  "dependencies": {
+  "devDependencies": {
     "nodemon": "*"
   },
   "engine": {
@@ -11,7 +11,8 @@
     "npm": "*"
   },
   "scripts": {
-    "start": "nodemon --ignore node_modules/ server.js"
+    "dev": "nodemon --ignore node_modules/ server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
